# ttt_qlearning

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  main.cpp  run.sh
ext/: catch.hpp
src/: CMakeLists.txt  Makefile  board.cpp  board.h  board.hpp  easy_game.cpp  easy_game.h  game.cpp  game.h  game.hpp  table.cpp  table.h  table.hpp  trainer.cpp  trainer.h  trainer.hpp
test/: CMakeLists.txt  Makefile  test_board.cpp  test_game.cpp  test_table.cpp  test_trainer.cpp
